@@ -1,3 +1,7 @@
+2007-05-12    <tino@firebird.03.softkill.net>
+
+	* sock.h (tino_sock_freeOn): now uses tino_file_close
+
 2007-06-13    <tino@firebird.03.softkill.net>
 
 	* alloc.h (TINO_REALLOC0, TINO_REALLOC0_INC): added
